fix in RU teams.adoc, mailings-lists.adoc, urls.adoc
Reviewed by: andy
Differential Revision: https://reviews.freebsd.org/D53828

--- a/shared/ru/mailing-lists.adoc
+++ b/shared/ru/mailing-lists.adoc
@@ -1,14 +1,15 @@
 //
-//  The FreeBSD Russian Documentation Project
-//    
-//  Названия списков рассылки FreeBSD и смежных областей интересов
-//    
-//  $FreeBSD$
+// Названия списков рассылки FreeBSD и смежных областей интересов
+// $FreeBSD$
 //
 
 :mailing-lists-desc: Сервер списков рассылки FreeBSD
 :mailing-lists-url: https://lists.freebsd.org
 :mailing-lists: {mailing-lists-url}[{mailing-lists-desc}]
+
+:freebsd-accessibility-desc: Обсуждение доступности FreeBSD
+:freebsd-accessibility-url: https://lists.FreeBSD.org/subscription/freebsd-accessibility
+:freebsd-accessibility: {freebsd-accessibility-url}[{freebsd-accessibility-desc}]
 
 :freebsd-acpi-desc: Список рассылки FreeBSD ACPI
 :freebsd-acpi-url: https://lists.FreeBSD.org/subscription/freebsd-acpi
@@ -18,11 +19,7 @@
 :freebsd-advocacy-url: https://lists.FreeBSD.org/subscription/freebsd-advocacy
 :freebsd-advocacy: {freebsd-advocacy-url}[{freebsd-advocacy-desc}]
 
-:freebsd-afs-desc: Список рассылки, посвящённый портированию AFS на FreeBSD
-:freebsd-afs-url: https://lists.FreeBSD.org/subscription/freebsd-afs
-:freebsd-afs: {freebsd-afs-url}[{freebsd-afs-desc}]
-
-:freebsd-aic7xxx-desc: Список рассылки, посвящённый поддержке контроллеров Adaptec AIC7xxx в FreeBSD
+:freebsd-aic7xxx-desc: Список рассылки, посвящённый поддержке контроллеров Adaptec AIC7xxx во FreeBSD
 :freebsd-aic7xxx-url: https://lists.FreeBSD.org/subscription/aic7xxx
 :freebsd-aic7xxx: {freebsd-aic7xxx-url}[{freebsd-aic7xxx-desc}]
 
@@ -50,15 +47,7 @@
 :freebsd-atm-url: https://lists.FreeBSD.org/subscription/freebsd-atm
 :freebsd-atm: {freebsd-atm-url}[{freebsd-atm-desc}]
 
-:freebsd-audit-desc: Список рассылки, посвящённый аудиту кода FreeBSD
-:freebsd-audit-url: https://lists.FreeBSD.org/subscription/freebsd-audit
-:freebsd-audit: {freebsd-audit-url}[{freebsd-audit-desc}]
-
-:freebsd-binup-desc: Список рассылки, посвящённый системе бинарного обновления FreeBSD
-:freebsd-binup-url: https://lists.FreeBSD.org/subscription/freebsd-binup
-:freebsd-binup: {freebsd-binup-url}[{freebsd-binup-desc}]
-
-:freebsd-bluetooth-desc: Список рассылки, посвящённый поддержке BlueTooth во FreeBSD
+:freebsd-bluetooth-desc: Список рассылки, посвящённый поддержке Bluetooth во FreeBSD
 :freebsd-bluetooth-url: https://lists.FreeBSD.org/subscription/freebsd-bluetooth
 :freebsd-bluetooth: {freebsd-bluetooth-url}[{freebsd-bluetooth-desc}]
 
@@ -74,9 +63,13 @@
 :freebsd-chat-url: https://lists.FreeBSD.org/subscription/freebsd-chat
 :freebsd-chat: {freebsd-chat-url}[{freebsd-chat-desc}]
 
-:freebsd-chromium-desc: Список рассылки, посвященный вопросам разработки и установки Chromium во FreeBSD
+:freebsd-chromium-desc: Список рассылки, посвящённый вопросам разработки и установки Chromium во FreeBSD
 :freebsd-chromium-url: https://lists.FreeBSD.org/subscription/freebsd-chromium
 :freebsd-chromium: {freebsd-chromium-url}[{freebsd-chromium-desc}]
+
+:freebsd-cloud-desc: FreeBSD на облачных платформах (EC2, GCE, Azure, etc.)
+:freebsd-cloud-url: https://lists.FreeBSD.org/subscription/freebsd-cloud
+:freebsd-cloud: {freebsd-cloud-url}[{freebsd-cloud-desc}]
 
 :freebsd-cluster-desc: Список рассылки, посвящённый кластерам под управлением FreeBSD
 :freebsd-cluster-url: https://lists.FreeBSD.org/subscription/freebsd-cluster
@@ -90,81 +83,73 @@
 :ctm-announce-url: https://lists.FreeBSD.org/subscription/ctm-announce
 :ctm-announce: {ctm-announce-url}[{ctm-announce-desc}]
 
-:ctm-src-4-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки 4-STABLE с использованием CTM
-:ctm-src-4-url: https://lists.FreeBSD.org/subscription/ctm-src-4
-:ctm-src-4: {ctm-src-4-url}[{ctm-src-4-desc}]
-
-:ctm-src-5-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки 5-STABLE с использованием CTM
-:ctm-src-5-url: https://lists.FreeBSD.org/subscription/ctm-src-5
-:ctm-src-5: {ctm-src-5-url}[{ctm-src-5-desc}]
-
-:ctm-src-6-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки 6-STABLE с использованием CTM
-:ctm-src-6-url: https://lists.FreeBSD.org/subscription/ctm-src-6
-:ctm-src-6: {ctm-src-6-url}[{ctm-src-6-desc}]
-
-:ctm-src-7-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки 7-STABLE с использованием CTM
-:ctm-src-7-url: https://lists.FreeBSD.org/subscription/ctm-src-7
-:ctm-src-7: {ctm-src-7-url}[{ctm-src-7-desc}]
-
-:ctm-src-8-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки 8-STABLE с использованием CTM
-:ctm-src-8-url: https://lists.FreeBSD.org/subscription/ctm-src-8
-:ctm-src-8: {ctm-src-8-url}[{ctm-src-8-desc}]
-
-:ctm-src-9-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки 9-STABLE с использованием CTM
-:ctm-src-9-url: https://lists.FreeBSD.org/subscription/ctm-src-9
-:ctm-src-9: {ctm-src-9-url}[{ctm-src-9-desc}]
-
-:ctm-src-10-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки 10-STABLE с использованием CTM
-:ctm-src-10-url: https://lists.FreeBSD.org/subscription/ctm-src-10
-:ctm-src-10: {ctm-src-10-url}[{ctm-src-10-desc}]
-
-:ctm-src-cur-desc: Список рассылки, посвящённый распространению файлов исходных текстов ветки -CURRENT с использованием CTM
-:ctm-src-cur-url: https://lists.FreeBSD.org/subscription/ctm-src-cur
-:ctm-src-cur: {ctm-src-cur-url}[{ctm-src-cur-desc}]
-
 :ctm-users-desc: Список рассылки, посвящённый CTM
 :ctm-users-url: https://lists.FreeBSD.org/subscription/ctm-users
 :ctm-users: {ctm-users-url}[{ctm-users-desc}]
-
-:cvs-all-desc: Список рассылки сообщений об изменениях в главном дереве исходных текстов FreeBSD
-:cvs-all-url: https://lists.FreeBSD.org/subscription/cvs-all
-:cvs-all: {cvs-all-url}[{cvs-all-desc}]
-
-:cvs-doc-desc: Список рассылки сообщений об изменениях в дереве документации FreeBSD
-:cvs-doc-url: https://lists.FreeBSD.org/subscription/cvs-doc
-:cvs-doc: {cvs-doc-url}[{cvs-doc-desc}]
-
-:cvs-ports-desc: Список рассылки сообщений об изменениях в дереве портов FreeBSD
-:cvs-ports-url: https://lists.FreeBSD.org/subscription/cvs-ports
-:cvs-ports: {cvs-ports-url}[{cvs-ports-desc}]
-
-:cvs-projects-desc: Список рассылки сообщений об изменениях в дереве проектов FreeBSD
-:cvs-projects-url: https://lists.FreeBSD.org/subscription/cvs-projects
-:cvs-projects: {cvs-projects-url}[{cvs-projects-desc}]
-
-:cvs-src-desc: Список рассылки сообщений об изменениях в дереве исходных текстов FreeBSD
-:cvs-src-url: https://lists.FreeBSD.org/subscription/cvs-src
-:cvs-src: {cvs-src-url}[{cvs-src-desc}]
-
-:freebsd-cvsweb-desc: Список рассылки, посвящённый поддержке FreeBSD CVSweb
-:freebsd-cvsweb-url: https://lists.FreeBSD.org/subscription/freebsd-cvsweb
-:freebsd-cvsweb: {freebsd-cvsweb-url}[{freebsd-cvsweb-desc}]
 
 :freebsd-database-desc: Список рассылки, посвящённый базам данных, работающим под управлением FreeBSD
 :freebsd-database-url: https://lists.FreeBSD.org/subscription/freebsd-database
 :freebsd-database: {freebsd-database-url}[{freebsd-database-desc}]
 
+:freebsd-desktop-desc: Использование и улучшение FreeBSD на настольных компьютерах
+:freebsd-desktop-url: https://lists.FreeBSD.org/subscription/freebsd-desktop
+:freebsd-desktop: {freebsd-desktop-url}[{freebsd-desktop-desc}]
+
+:dev-ci-desc: Автоматические отчёты о сборке и тестировании из инструментов непрерывной интеграции FreeBSD
+:dev-ci-url: https://lists.FreeBSD.org/subscription/dev-ci
+:dev-ci: {dev-ci-url}[{dev-ci-desc}]
+
+:dev-commits-doc-all-desc: Коммиты во все ветки репозитория документации
+:dev-commits-doc-all-url: https://lists.FreeBSD.org/subscription/dev-commits-doc-all
+:dev-commits-doc-all: {dev-commits-doc-all-url}[{dev-commits-doc-all-desc}]
+
+:dev-commits-ports-all-desc: Коммиты во все ветки репозитория портов
+:dev-commits-ports-all-url: https://lists.FreeBSD.org/subscription/dev-commits-ports-all
+:dev-commits-ports-all: {dev-commits-ports-all-url}[{dev-commits-ports-all-desc}]
+
+:dev-commits-ports-branches-desc: Коммиты в квартальные ветки репозитория портов
+:dev-commits-ports-branches-url: https://lists.FreeBSD.org/subscription/dev-commits-ports-branches
+:dev-commits-ports-branches: {dev-commits-ports-branches-url}[{dev-commits-ports-branches-desc}]
+
+:dev-commits-ports-main-desc: Коммиты в ветку main репозитория портов
+:dev-commits-ports-main-url: https://lists.FreeBSD.org/subscription/dev-commits-ports-main
+:dev-commits-ports-main: {dev-commits-ports-main-url}[{dev-commits-ports-main-desc}]
+
+:dev-commits-src-all-desc: Коммиты во все ветки репозитория исходного кода
+:dev-commits-src-all-url: https://lists.FreeBSD.org/subscription/dev-commits-src-all
+:dev-commits-src-all: {dev-commits-src-all-url}[{dev-commits-src-all-desc}]
+
+:dev-commits-src-branches-desc: Коммиты в ветки stable репозитория исходного кода
+:dev-commits-src-branches-url: https://lists.FreeBSD.org/subscription/dev-commits-src-branches
+:dev-commits-src-branches: {dev-commits-src-branches-url}[{dev-commits-src-branches-desc}]
+
+:dev-commits-src-main-desc: Коммиты в ветку main репозитория исходного кода
+:dev-commits-src-main-url: https://lists.FreeBSD.org/subscription/dev-commits-src-main
+:dev-commits-src-main: {dev-commits-src-main-url}[{dev-commits-src-main-desc}]
+
+:dev-reviews-desc: Автоматические уведомления о работе, готовой к рассмотрению в инструментах FreeBSD, включая патчи
+:dev-reviews-url: https://lists.FreeBSD.org/subscription/dev-reviews
+:dev-reviews: {dev-reviews-url}[{dev-reviews-desc}]
+
 :freebsd-doc-desc: Список рассылки Проекта Документации FreeBSD
 :freebsd-doc-url: https://lists.FreeBSD.org/subscription/freebsd-doc
 :freebsd-doc: {freebsd-doc-url}[{freebsd-doc-desc}]
 
-:freebsd-drivers-desc: Список рассылки, посвященный написанию драйверов устройств для FreeBSD
+:freebsd-drivers-desc: Список рассылки, посвящённый написанию драйверов устройств для FreeBSD
 :freebsd-drivers-url: https://lists.FreeBSD.org/subscription/freebsd-drivers
 :freebsd-drivers: {freebsd-drivers-url}[{freebsd-drivers-desc}]
 
-:freebsd-eclipse-desc: Список рассылки FreeBSD, посвященный системам электронного документооборота Eclipse
+:freebsd-dtrace-desc: Использование и разработка DTrace во FreeBSD
+:freebsd-dtrace-url: https://lists.FreeBSD.org/subscription/freebsd-dtrace
+:freebsd-dtrace: {freebsd-dtrace-url}[{freebsd-dtrace-desc}]
+
+:freebsd-eclipse-desc: Список рассылки FreeBSD, посвящённый системам электронного документооборота Eclipse
 :freebsd-eclipse-url: https://lists.FreeBSD.org/subscription/freebsd-eclipse
 :freebsd-eclipse: {freebsd-eclipse-url}[{freebsd-eclipse-desc}]
+
+:freebsd-elastic-desc: Специализированная рассылка по ElasticSearch для FreeBSD
+:freebsd-elastic-url: https://lists.FreeBSD.org/subscription/freebsd-elastic
+:freebsd-elastic: {freebsd-elastic-url}[{freebsd-elastic-desc}]
 
 :freebsd-embedded-desc: Список рассылки, посвящённый работе FreeBSD во встроенных системах
 :freebsd-embedded-url: https://lists.FreeBSD.org/subscription/freebsd-embedded
@@ -174,17 +159,33 @@
 :freebsd-emulation-url: https://lists.FreeBSD.org/subscription/freebsd-emulation
 :freebsd-emulation: {freebsd-emulation-url}[{freebsd-emulation-desc}]
 
+:freebsd-enlightenment-desc: Список рассылки FreeBSD-enlightenment
+:freebsd-enlightenment-url: https://lists.FreeBSD.org/subscription/freebsd-enlightenment
+:freebsd-enlightenment: {freebsd-enlightenment-url}[{freebsd-enlightenment-desc}]
+
 :freebsd-eol-desc: Список рассылки FreeBSD-eol
 :freebsd-eol-url: https://lists.FreeBSD.org/subscription/freebsd-eol
 :freebsd-eol: {freebsd-eol-url}[{freebsd-eol-desc}]
 
-:freebsd-firewire-desc: Список рассылки, посвящённый поддержке FireWire (IEEE 1394) в FreeBSD
+:freebsd-erlang-desc: Список рассылки FreeBSD-erlang
+:freebsd-erlang-url: https://lists.FreeBSD.org/subscription/freebsd-erlang
+:freebsd-erlang: {freebsd-erlang-url}[{freebsd-erlang-desc}]
+
+:freebsd-firewire-desc: Список рассылки, посвящённый поддержке FireWire (IEEE 1394) во FreeBSD
 :freebsd-firewire-url: https://lists.FreeBSD.org/subscription/freebsd-firewire
 :freebsd-firewire: {freebsd-firewire-url}[{freebsd-firewire-desc}]
+
+:freebsd-fortran-desc: Список рассылки, посвящённый поддержке Fortran во FreeBSD
+:freebsd-fortran-url: https://lists.FreeBSD.org/subscription/freebsd-fortran
+:freebsd-fortran: {freebsd-fortran-url}[{freebsd-fortran-desc}]
 
 :freebsd-fs-desc: Список рассылки, посвящённый обсуждению файловых систем во FreeBSD
 :freebsd-fs-url: https://lists.FreeBSD.org/subscription/freebsd-fs
 :freebsd-fs: {freebsd-fs-url}[{freebsd-fs-desc}]
+
+:freebsd-games-desc: Список рассылки об играх во FreeBSD
+:freebsd-games-url: https://lists.FreeBSD.org/subscription/freebsd-games
+:freebsd-games: {freebsd-games-url}[{freebsd-games-desc}]
 
 :freebsd-gecko-desc: Список рассылки, посвящённый FreeBSD gecko
 :freebsd-gecko-url: https://lists.FreeBSD.org/subscription/freebsd-gecko
@@ -194,17 +195,25 @@
 :freebsd-geom-url: https://lists.FreeBSD.org/subscription/freebsd-geom
 :freebsd-geom: {freebsd-geom-url}[{freebsd-geom-desc}]
 
-:freebsd-gnome-desc: Список рассылки, посвящённый использованию GNOME и GNOME-приложений под FreeBSD
+:freebsd-git-desc: Обсуждение использования Git в проекте FreeBSD
+:freebsd-git-url: https://lists.FreeBSD.org/subscription/freebsd-git
+:freebsd-git: {freebsd-git-url}[{freebsd-git-desc}]
+
+:freebsd-gnome-desc: Список рассылки, посвящённый использованию GNOME и приложений для GNOME во FreeBSD
 :freebsd-gnome-url: https://lists.FreeBSD.org/subscription/freebsd-gnome
 :freebsd-gnome: {freebsd-gnome-url}[{freebsd-gnome-desc}]
 
-:freebsd-hackers-desc: Список рассылки FreeBSD, посвящённый техническим дискуссиям
+:freebsd-hackers-desc: Список рассылки FreeBSD, посвящённый техническим обсуждениям
 :freebsd-hackers-url: https://lists.FreeBSD.org/subscription/freebsd-hackers
 :freebsd-hackers: {freebsd-hackers-url}[{freebsd-hackers-desc}]
 
 :freebsd-hardware-desc: Список рассылки FreeBSD, посвящённый оборудованию
 :freebsd-hardware-url: https://lists.FreeBSD.org/subscription/freebsd-hardware
 :freebsd-hardware: {freebsd-hardware-url}[{freebsd-hardware-desc}]
+
+:freebsd-haskell-desc: Проблемы и обсуждения Haskell, связанные с FreeBSD
+:freebsd-haskell-url: https://lists.FreeBSD.org/subscription/freebsd-haskell
+:freebsd-haskell: {freebsd-haskell-url}[{freebsd-haskell-desc}]
 
 :freebsd-hubs-desc: Список рассылки, посвящённый зеркалированию FreeBSD
 :freebsd-hubs-url: https://lists.FreeBSD.org/subscription/freebsd-hubs
@@ -214,17 +223,13 @@
 :freebsd-i18n-url: https://lists.FreeBSD.org/subscription/freebsd-i18n
 :freebsd-i18n: {freebsd-i18n-url}[{freebsd-i18n-desc}]
 
-:freebsd-i386-desc: Список рассылки, посвящённый проблемам специфичным для процессоров i386 под FreeBSD
+:freebsd-i386-desc: Список рассылки, посвящённый проблемам, специфичным для процессоров i386 под FreeBSD
 :freebsd-i386-url: https://lists.FreeBSD.org/subscription/freebsd-i386
 :freebsd-i386: {freebsd-i386-url}[{freebsd-i386-desc}]
 
-:freebsd-ia32-desc: Список рассылки, посвящённый портированию FreeBSD на архитектуру IA32
-:freebsd-ia32-url: https://lists.FreeBSD.org/subscription/freebsd-ia32
-:freebsd-ia32: {freebsd-ia32-url}[{freebsd-ia32-desc}]
-
-:freebsd-ia64-desc: Список рассылки, посвящённый портированию FreeBSD на архитектуру IA64
-:freebsd-ia64-url: https://lists.FreeBSD.org/subscription/freebsd-ia64
-:freebsd-ia64: {freebsd-ia64-url}[{freebsd-ia64-desc}]
+:freebsd-infiniband-desc: Infiniband во FreeBSD
+:freebsd-infiniband-url: https://lists.FreeBSD.org/subscription/freebsd-infiniband
+:freebsd-infiniband: {freebsd-infiniband-url}[{freebsd-infiniband-desc}]
 
 :freebsd-ipfw-desc: Список рассылки, посвящённый обсуждению кода IPFW
 :freebsd-ipfw-url: https://lists.FreeBSD.org/subscription/freebsd-ipfw
@@ -250,17 +255,13 @@
 :freebsd-jobs-url: https://lists.FreeBSD.org/subscription/freebsd-jobs
 :freebsd-jobs: {freebsd-jobs-url}[{freebsd-jobs-desc}]
 
-:freebsd-kde-desc: Список рассылки, посвящённый поддержке KDE/Qt and KDE приложений в FreeBSD
+:freebsd-kde-desc: Список рассылки, посвящённый поддержке KDE/Qt и приложений для KDE во FreeBSD
 :freebsd-kde-url: https://mail.kde.org/mailman/listinfo/kde-freebsd
 :freebsd-kde: {freebsd-kde-url}[{freebsd-kde-desc}]
 
 :freebsd-lfs-desc: Список рассылки, посвящённый портированию LFS на FreeBSD
 :freebsd-lfs-url: https://lists.FreeBSD.org/subscription/freebsd-lfs
 :freebsd-lfs: {freebsd-lfs-url}[{freebsd-lfs-desc}]
-
-:freebsd-libh-desc: Список рассылки, посвящённый системе установки и управления пакетами во FreeBSD
-:freebsd-libh-url: https://lists.FreeBSD.org/subscription/freebsd-libh
-:freebsd-libh: {freebsd-libh-url}[{freebsd-libh-desc}]
 
 :freebsd-mips-desc: Список рассылки, посвящённый портированию FreeBSD на архитектуру MIPS
 :freebsd-mips-url: https://lists.FreeBSD.org/subscription/freebsd-mips
@@ -270,17 +271,9 @@
 :mirror-announce-url: https://lists.FreeBSD.org/subscription/mirror-announce
 :mirror-announce: {mirror-announce-url}[{mirror-announce-desc}]
 
-:freebsd-mobile-desc: Список рассылки FreeBSD, посвящённый переносным компьютерам
-:freebsd-mobile-url: https://lists.FreeBSD.org/subscription/freebsd-mobile
-:freebsd-mobile: {freebsd-mobile-url}[{freebsd-mobile-desc}]
-
-:freebsd-mono-desc: Mono and C# приложения на FreeBSD
+:freebsd-mono-desc: Приложения Mono и C# во на FreeBSD
 :freebsd-mono-url: https://lists.FreeBSD.org/subscription/freebsd-mono
 :freebsd-mono: {freebsd-mono-url}[{freebsd-mono-desc}]
-
-:freebsd-mozilla-desc: Список рассылки, посвящённый портированию Mozilla под FreeBSD
-:freebsd-mozilla-url: https://lists.FreeBSD.org/subscription/freebsd-mozilla
-:freebsd-mozilla: {freebsd-mozilla-url}[{freebsd-mozilla-desc}]
 
 :freebsd-multimedia-desc: Список рассылки, посвящённый поддержке средств мультимедиа под FreeBSD
 :freebsd-multimedia-url: https://lists.FreeBSD.org/subscription/freebsd-multimedia
@@ -298,9 +291,21 @@
 :freebsd-new-bus-url: https://lists.FreeBSD.org/subscription/freebsd-new-bus
 :freebsd-new-bus: {freebsd-new-bus-url}[{freebsd-new-bus-desc}]
 
+:freebsd-numerics-desc: Обсуждение высококачественной реализации функций libm
+:freebsd-numerics-url: https://lists.FreeBSD.org/subscription/freebsd-numerics
+:freebsd-numerics: {freebsd-numerics-url}[{freebsd-numerics-desc}]
+
+:freebsd-ocaml-desc: Обсуждения OCaml, связанные с FreeBSD
+:freebsd-ocaml-url: https://lists.FreeBSD.org/subscription/freebsd-ocaml
+:freebsd-ocaml: {freebsd-ocaml-url}[{freebsd-ocaml-desc}]
+
 :freebsd-office-desc: Офисные приложения во FreeBSD
 :freebsd-office-url: https://lists.FreeBSD.org/subscription/freebsd-office
 :freebsd-office: {freebsd-office-url}[{freebsd-office-desc}]
+
+:freebsd-ops-announce-desc: Анонсы об инфраструктере Проекта
+:freebsd-ops-announce-url: https://lists.FreeBSD.org/subscription/freebsd-ops-announce
+:freebsd-ops-announce: {freebsd-ops-announce-url}[{freebsd-ops-announce-desc}]
 
 :freebsd-performance-desc: Список рассылки, посвящённый оптимизации FreeBSD
 :freebsd-performance-url: https://lists.FreeBSD.org/subscription/freebsd-performance
@@ -314,13 +319,21 @@
 :freebsd-pf-url: https://lists.FreeBSD.org/subscription/freebsd-pf
 :freebsd-pf: {freebsd-pf-url}[{freebsd-pf-desc}]
 
+:freebsd-pkg-desc: Обсуждение управления бинарными пакетами и инструментов пакетов
+:freebsd-pkg-url: https://lists.FreeBSD.org/subscription/freebsd-pkg
+:freebsd-pkg: {freebsd-pkg-url}[{freebsd-pkg-desc}]
+
+:freebsd-pkg-fallout-desc: Журналы ошибок при сборке
+:freebsd-pkg-fallout-url: https://lists.FreeBSD.org/subscription/freebsd-pkg-fallout
+:freebsd-pkg-fallout: {freebsd-pkg-fallout-url}[{freebsd-pkg-fallout-desc}]
+
+:freebsd-pkgbase-desc: Создание пакетов базовой системы FreeBSD
+:freebsd-pkgbase-url: https://lists.FreeBSD.org/subscription/freebsd-pkgbase
+:freebsd-pkgbase: {freebsd-pkgbase-url}[{freebsd-pkgbase-desc}]
+
 :freebsd-platforms-desc: Список рассылки, посвящённый портированию FreeBSD на не-Intel платформы
 :freebsd-platforms-url: https://lists.FreeBSD.org/subscription/freebsd-platforms
 :freebsd-platforms: {freebsd-platforms-url}[{freebsd-platforms-desc}]
-
-:freebsd-policy-desc: Список рассылки, посвящённый политике и принимаемым решениям Core
-:freebsd-policy-url: https://lists.FreeBSD.org/subscription/freebsd-policy
-:freebsd-policy: {freebsd-policy-url}[{freebsd-policy-desc}]
 
 :freebsd-ports-desc: Список рассылки, посвящённый Портам FreeBSD
 :freebsd-ports-url: https://lists.FreeBSD.org/subscription/freebsd-ports
@@ -346,6 +359,10 @@
 :freebsd-python-url: https://lists.FreeBSD.org/subscription/freebsd-python
 :freebsd-python: {freebsd-python-url}[{freebsd-python-desc}]
 
+:freebsd-quarterly-calls-desc: Запросы квартальных отчётов о состоянии FreeBSD
+:freebsd-quarterly-calls-url: https://lists.FreeBSD.org/subscription/freebsd-quarterly-calls
+:freebsd-quarterly-calls: {freebsd-quarterly-calls-url}[{freebsd-quarterly-calls-desc}]
+
 :freebsd-questions-desc: Список рассылки, посвящённый вопросам и ответам пользователей FreeBSD
 :freebsd-questions-url: https://lists.FreeBSD.org/subscription/freebsd-questions
 :freebsd-questions: {freebsd-questions-url}[{freebsd-questions-desc}]
@@ -357,6 +374,10 @@
 :freebsd-realtime-desc: Список рассылки, посвящённый realtime-расширениям FreeBSD
 :freebsd-realtime-url: https://lists.FreeBSD.org/subscription/freebsd-realtime
 :freebsd-realtime: {freebsd-realtime-url}[{freebsd-realtime-desc}]
+
+:freebsd-riscv-desc: Рассылка по портированию FreeBSD на RISC-V
+:freebsd-riscv-url: https://lists.FreeBSD.org/subscription/freebsd-riscv
+:freebsd-riscv: {freebsd-riscv-url}[{riscv-riscv-desc}]
 
 :freebsd-ruby-desc: Список рассылки, посвящённый FreeBSD Ruby
 :freebsd-ruby-url: https://lists.FreeBSD.org/subscription/freebsd-ruby
@@ -374,15 +395,15 @@
 :freebsd-security-notifications-url: https://lists.FreeBSD.org/subscription/freebsd-security-notifications
 :freebsd-security-notifications: {freebsd-security-notifications-url}[{freebsd-security-notifications-desc}]
 
-:freebsd-small-desc: Список рассылки, посвящённый малым и встроенным системам, созданным на базе FreeBSD
-:freebsd-small-url: https://lists.FreeBSD.org/subscription/freebsd-small
-:freebsd-small: {freebsd-small-url}[{freebsd-small-desc}]
+:freebsd-snapshots-desc: Анонсы промежуточных технических релизов FreeBSD
+:freebsd-snapshots-url: https://lists.FreeBSD.org/subscription/freebsd-snapshots
+:freebsd-snapshots: {freebsd-snapshots-url}[{freebsd-snapshots-desc}]
 
 :freebsd-sparc64-desc: Список рассылки, посвящённый портированию FreeBSD на архитектуру SPARC
 :freebsd-sparc64-url: https://lists.FreeBSD.org/subscription/freebsd-sparc64
 :freebsd-sparc64: {freebsd-sparc64-url}[{freebsd-sparc64-desc}]
 
-:freebsd-stable-desc: Список рассылки, посвящённый обсуждению FreeBSD-STABLE;
+:freebsd-stable-desc: Список рассылки, посвящённый обсуждению FreeBSD-STABLE
 :freebsd-stable-url: https://lists.FreeBSD.org/subscription/freebsd-stable
 :freebsd-stable: {freebsd-stable-url}[{freebsd-stable-desc}]
 
@@ -394,69 +415,113 @@
 :freebsd-sun4v-url: https://lists.FreeBSD.org/subscription/freebsd-sun4v
 :freebsd-sun4v: {freebsd-sun4v-url}[{freebsd-sun4v-desc}]
 
+:svn-doc-all-desc: SVN commit messages for the entire doc tree (except for "user", "projects" and "translations")
+:svn-doc-all-url: https://lists.FreeBSD.org/pipermail/svn-doc-all
+:svn-doc-all: {svn-doc-all-url}[{svn-doc-all-desc}]
+
+:svn-doc-head-desc: SVN commit messages for the doc tree for head/
+:svn-doc-head-url: https://lists.FreeBSD.org/pipermail/svn-doc-head
+:svn-doc-head: {svn-doc-head-url}[{svn-doc-head-desc}]
+
+:svn-doc-projects-desc: SVN commit messages for the doc "projects" tree
+:svn-doc-projects-url: https://lists.FreeBSD.org/pipermail/svn-doc-projects
+:svn-doc-projects: {svn-doc-projects-url}[{svn-doc-projects-desc}]
+
+:svn-doc-svnadmin-desc: SVN commit messages for the doc admin / configuration tree
+:svn-doc-svnadmin-url: https://lists.FreeBSD.org/pipermail/svn-doc-svnadmin
+:svn-doc-svnadmin: {svn-doc-svnadmin-url}[{svn-doc-svnadmin-desc}]
+
+:svn-ports-all-desc: SVN commit messages for the entire ports tree
+:svn-ports-all-url: https://lists.FreeBSD.org/pipermail/svn-ports-all
+:svn-ports-all: {svn-ports-all-url}[{svn-ports-all-desc}]
+
+:svn-ports-head-desc: SVN commit messages for the ports tree for head/
+:svn-ports-head-url: https://lists.FreeBSD.org/pipermail/svn-ports-head
+:svn-ports-head: {svn-ports-head-url}[{svn-ports-head-desc}]
+
+:svn-ports-svnadmin-desc: SVN commit messages for the ports admin / configuration tree
+:svn-ports-svnadmin-url: https://lists.FreeBSD.org/pipermail/svn-ports-svnadmin
+:svn-ports-svnadmin: {svn-ports-svnadmin-url}[{svn-ports-svnadmin-desc}]
+
 :svn-src-all-desc: Список рассылки сообщений об изменениях в репозитории SVN для всего дерева исходных текстов (за исключением <quote>user</quote> и <quote>projects</quote>)
-:svn-src-all-url: https://lists.FreeBSD.org/subscription/svn-src-all
+:svn-src-all-url: https://lists.FreeBSD.org/pipermail/svn-src-all
 :svn-src-all: {svn-src-all-url}[{svn-src-all-desc}]
 
 :svn-src-head-desc: Список рассылки сообщений об изменениях в репозитории SVN для ветки head/-current дерева исходных текстов
-:svn-src-head-url: https://lists.FreeBSD.org/subscription/svn-src-head
+:svn-src-head-url: https://lists.FreeBSD.org/pipermail/svn-src-head
 :svn-src-head: {svn-src-head-url}[{svn-src-head-desc}]
 
 :svn-src-projects-desc: Список рассылки сообщений об изменениях в репозитории SVN в части <quote>projects</quote> дерева исходных текстов
-:svn-src-projects-url: https://lists.FreeBSD.org/subscription/svn-src-projects
+:svn-src-projects-url: https://lists.FreeBSD.org/pipermail/svn-src-projects
 :svn-src-projects: {svn-src-projects-url}[{svn-src-projects-desc}]
 
 :svn-src-release-desc: Список рассылки сообщений об изменениях в репозитории SVN в части <quote>release</quote> дерева исходных текстов
-:svn-src-release-url: https://lists.FreeBSD.org/subscription/svn-src-release
+:svn-src-release-url: https://lists.FreeBSD.org/pipermail/svn-src-release
 :svn-src-release: {svn-src-release-url}[{svn-src-release-desc}]
 
 :svn-src-releng-desc: Список рассылки сообщений об изменениях в репозитории SVN в части releng / security дерева исходных текстов
-:svn-src-releng-url: https://lists.FreeBSD.org/subscription/svn-src-releng
+:svn-src-releng-url: https://lists.FreeBSD.org/pipermail/svn-src-releng
 :svn-src-releng: {svn-src-releng-url}[{svn-src-releng-desc}]
 
 :svn-src-stable-desc: Список рассылки сообщений об изменениях в репозитории SVN для всех веток -stable дерева исходных текстов
-:svn-src-stable-url: https://lists.FreeBSD.org/subscription/svn-src-stable
+:svn-src-stable-url: https://lists.FreeBSD.org/pipermail/svn-src-stable
 :svn-src-stable: {svn-src-stable-url}[{svn-src-stable-desc}]
 
 :svn-src-stable-6-desc: Список рассылки сообщений об изменениях в репозитории SVN для ветки 6-stable дерева исходных текстов
-:svn-src-stable-6-url: https://lists.FreeBSD.org/subscription/svn-src-stable-6
+:svn-src-stable-6-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-6
 :svn-src-stable-6: {svn-src-stable-6-url}[{svn-src-stable-6-desc}]
 
 :svn-src-stable-7-desc: Список рассылки сообщений об изменениях в репозитории SVN для ветки 7-stable дерева исходных текстов
-:svn-src-stable-7-url: https://lists.FreeBSD.org/subscription/svn-src-stable-7
+:svn-src-stable-7-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-7
 :svn-src-stable-7: {svn-src-stable-7-url}[{svn-src-stable-7-desc}]
 
 :svn-src-stable-8-desc: Список рассылки сообщений об изменениях в репозитории SVN для ветки 8-stable дерева исходных текстов
-:svn-src-stable-8-url: https://lists.FreeBSD.org/subscription/svn-src-stable-8
+:svn-src-stable-8-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-8
 :svn-src-stable-8: {svn-src-stable-8-url}[{svn-src-stable-8-desc}]
 
 :svn-src-stable-9-desc: Список рассылки сообщений об изменениях в репозитории SVN для ветки 9-stable дерева исходных текстов
-:svn-src-stable-9-url: https://lists.FreeBSD.org/subscription/svn-src-stable-9
+:svn-src-stable-9-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-9
 :svn-src-stable-9: {svn-src-stable-9-url}[{svn-src-stable-9-desc}]
 
 :svn-src-stable-10-desc: Список рассылки сообщений об изменениях в репозитории SVN для ветки 10-stable дерева исходных текстов
-:svn-src-stable-10-url: https://lists.FreeBSD.org/subscription/svn-src-stable-10
+:svn-src-stable-10-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-10
 :svn-src-stable-10: {svn-src-stable-10-url}[{svn-src-stable-10-desc}]
 
+:svn-src-stable-11-desc: SVN commit messages for only the 11-stable src tree
+:svn-src-stable-11-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-11
+:svn-src-stable-11: {svn-src-stable-11-url}[{svn-src-stable-11-desc}]
+
+:svn-src-stable-12-desc: SVN commit messages for only the 12-stable src tree
+:svn-src-stable-12-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-12
+:svn-src-stable-12: {svn-src-stable-12-url}[{svn-src-stable-12-desc}]
+
 :svn-src-stable-other-desc: Список рассылки сообщений об изменениях в репозитории SVN для предыдущих stable веток дерева исходных текстов
-:svn-src-stable-other-url: https://lists.FreeBSD.org/subscription/svn-src-stable-other
+:svn-src-stable-other-url: https://lists.FreeBSD.org/pipermail/svn-src-stable-other
 :svn-src-stable-other: {svn-src-stable-other-url}[{svn-src-stable-other-desc}]
 
 :svn-src-svnadmin-desc: Список рассылки сообщений об изменениях в репозитории SVN для части admin / configuration
-:svn-src-svnadmin-url: https://lists.FreeBSD.org/subscription/svn-src-svnadmin
+:svn-src-svnadmin-url: https://lists.FreeBSD.org/pipermail/svn-src-svnadmin
 :svn-src-svnadmin: {svn-src-svnadmin-url}[{svn-src-svnadmin-desc}]
 
 :svn-src-user-desc: Список рассылки сообщений об изменениях в репозитории SVN для экспериментальной части <quote>user</quote> дерева исходных текстов
-:svn-src-user-url: https://lists.FreeBSD.org/subscription/svn-src-user
+:svn-src-user-url: https://lists.FreeBSD.org/pipermail/svn-src-user
 :svn-src-user: {svn-src-user-url}[{svn-src-user-desc}]
 
 :svn-src-vendor-desc: Список рассылки сообщений об изменениях в репозитории SVN для части дерева, выделенного для работы поставщиков (vendor work area)
-:svn-src-vendor-url: https://lists.FreeBSD.org/subscription/svn-src-vendor
+:svn-src-vendor-url: https://lists.FreeBSD.org/pipermail/svn-src-vendor
 :svn-src-vendor: {svn-src-vendor-url}[{svn-src-vendor-desc}]
 
-:freebsd-sysinstall-desc: Список рассылки, посвященный разработке sysinstall
+:freebsd-sysinstall-desc: Список рассылки, посвящённый разработке sysinstall
 :freebsd-sysinstall-url: https://lists.FreeBSD.org/subscription/freebsd-sysinstall
 :freebsd-sysinstall: {freebsd-sysinstall-url}[{freebsd-sysinstall-desc}]
+
+:freebsd-tcltk-desc: Обсуждения Tcl/Tk, связанные с FreeBSD
+:freebsd-tcltk-url: https://lists.FreeBSD.org/subscription/freebsd-tcltk
+:freebsd-tcltk: {freebsd-tcltk-url}[{freebsd-tcltk-desc}]
+
+:freebsd-teaching-desc: Рассылка по преподаванию FreeBSD
+:freebsd-teaching-url: https://lists.FreeBSD.org/subscription/freebsd-teaching
+:freebsd-teaching: {freebsd-teaching-url}[{freebsd-teaching-desc}]
 
 :freebsd-test-desc: Тестовый список рассылки FreeBSD
 :freebsd-test-url: https://lists.FreeBSD.org/subscription/freebsd-test
@@ -466,13 +531,13 @@
 :freebsd-testing-url: https://lists.FreeBSD.org/subscription/freebsd-testing
 :freebsd-testing: {freebsd-testing-url}[{freebsd-testing-desc}]
 
-:freebsd-threads-desc: Список рассылки, посвящённый поддержке многопоточности в FreeBSD
+:freebsd-tex-desc: Портирование TeX и его приложений на FreeBSD
+:freebsd-tex-url: https://lists.FreeBSD.org/subscription/freebsd-tex
+:freebsd-tex: {freebsd-tex-url}[{freebsd-tex-desc}]
+
+:freebsd-threads-desc: Список рассылки, посвящённый поддержке многопоточности во FreeBSD
 :freebsd-threads-url: https://lists.FreeBSD.org/subscription/freebsd-threads
 :freebsd-threads: {freebsd-threads-url}[{freebsd-threads-desc}]
-
-:freebsd-tilera-desc: Список рассылки, посвящённый вопросам портирования FreeBSD на процессоры Tilera
-:freebsd-tilera-url: https://lists.FreeBSD.org/subscription/freebsd-tilera
-:freebsd-tilera: {freebsd-tilera-url}[{freebsd-tilera-desc}]
 
 :freebsd-tokenring-desc: Список рассылки, посвящённый поддержке TokenRing во FreeBSD
 :freebsd-tokenring-url: https://lists.FreeBSD.org/subscription/freebsd-tokenring
@@ -482,7 +547,15 @@
 :freebsd-toolchain-url: https://lists.FreeBSD.org/subscription/freebsd-toolchain
 :freebsd-toolchain: {freebsd-toolchain-url}[{freebsd-toolchain-desc}]
 
-:freebsd-usb-desc: Список рассылки, посвященный поддержке USB в FreeBSD
+:freebsd-translators-desc: Список рассылки переводчиков FreeBSD
+:freebsd-translators-url: https://lists.FreeBSD.org/subscription/freebsd-translators
+:freebsd-translators: {freebsd-translators-url}[{freebsd-translators-desc}]
+
+:freebsd-transport-desc: Список рассылки, посвящённый FreeBSD transport
+:freebsd-transport-url: https://lists.FreeBSD.org/subscription/freebsd-transport
+:freebsd-transport: {freebsd-transport-url}[{freebsd-transport-desc}]
+
+:freebsd-usb-desc: Список рассылки, посвящённый поддержке USB во FreeBSD
 :freebsd-usb-url: https://lists.FreeBSD.org/subscription/freebsd-usb
 :freebsd-usb: {freebsd-usb-url}[{freebsd-usb-desc}]
 
@@ -499,7 +572,7 @@
 :freebsd-virtualization: {freebsd-virtualization-url}[{freebsd-virtualization-desc}]
 
 :freebsd-vuxml-desc: Обсуждение инфраструктуры VuXML
-:freebsd-vuxml-url: Обсуждение инфраструктуры VuXML
+:freebsd-vuxml-url: https://lists.FreeBSD.org/subscription/freebsd-vuxml
 :freebsd-vuxml: {freebsd-vuxml-url}[{freebsd-vuxml-desc}]
 
 :freebsd-wip-status-desc: Список рассылки, предназначенный для анонсов статуса начатых работ над FreeBSD (Work-In-Progress Status)
@@ -509,6 +582,10 @@
 :freebsd-wireless-desc: Обсуждение разработки стека 802.11, утилит, драйверов устройств
 :freebsd-wireless-url: https://lists.FreeBSD.org/subscription/freebsd-wireless
 :freebsd-wireless: {freebsd-wireless-url}[{freebsd-wireless-desc}]
+
+:freebsd-women-desc: Женщины и FreeBSD
+:freebsd-women-url: https://lists.FreeBSD.org/subscription/freebsd-women
+:freebsd-women: {freebsd-women-url}[{freebsd-women-desc}]
 
 :freebsd-www-desc: Вебмастеры сайта www.FreeBSD.org
 :freebsd-www-url: https://lists.FreeBSD.org/subscription/freebsd-www
@@ -522,11 +599,19 @@
 :freebsd-xen-url: https://lists.FreeBSD.org/subscription/freebsd-xen
 :freebsd-xen: {freebsd-xen-url}[{freebsd-xen-desc}]
 
+:freebsd-xfce-desc: Список рассылки, посвящённый XFCE во FreeBSD
+:freebsd-xfce-url: https://lists.FreeBSD.org/subscription/freebsd-xfce
+:freebsd-xfce: {freebsd-xfce-url}[{freebsd-xfce-desc}]
+
+:freebsd-zope-desc: Список рассылки, посвящённый Zope во FreeBSD
+:freebsd-zope-url: https://lists.FreeBSD.org/subscription/freebsd-zope
+:freebsd-zope: {freebsd-zope-url}[{freebsd-zope-desc}]
+
 :committers-name: Список рассылки коммиттеров FreeBSD
 :committers: {committers-name}
 
-:core-name: FreeBSD Core
-:core: {core-name}
+:core-email: core@FreeBSD.org
+:core-name: Основная команда
 
 :developers-name: Список рассылки разработчиков FreeBSD
 :developers: {committers-developers}
@@ -556,11 +641,6 @@
 :bugsubmit: {bugfollowup}
 
 :majordomo: majordomo@FreeBSD.org
-
-// FRDP related mailing lists
-:ru-doc-desc: Список рассылки Проекта Русской Документации FreeBSD
-:ru-doc-email: frdp@FreeBSD.org.ua
-:ru-doc: {ru-doc-email}[{ru-doc-desc}]
 
 // The following mailinglists are deactivated.  Keep them until all references
 // in the documentation are gone.
