--- a/shared/ru/teams.adoc
+++ b/shared/ru/teams.adoc
@@ -1,45 +1,47 @@
 //
-//   The FreeBSD Russian Documentation Project
+//     Names and email address of teams of people working on specified
+//     tasks. Usually they're just mail aliases set up at hub.FreeBSD.org
 //
-//   $FreeBSD$
+//     Use these entities when referencing appropriate teams.
 //
-//   Names and email address of teams of people working on specified
-//   tasks. Usally they're just mail aliases set up at hub.FreeBSD.org
+//     Please keep this list in alphabetical order by entity names.
 //
-//   Use these entities when referencing appropriate teams.
+//     IMPORTANT:  If you delete names from this file you *must* ensure that
+//                 all references to them have been removed from the handbook's
+//                 translations.  If they haven't then you *will* break the
+//                 builds for the other languages, and we will poke fun of you
+//                 in public.
 //
-//   Please keep this list in alphabetical order by entity names.
-//
-//   IMPORTANT:  If you delete names from this file you *must* ensure that
-//                        all references to them have been removed from the handbook's
-//                        translations.  If they haven't then you *will* break the
-//                        builds for the other languages, and we will poke fun of you
-//                        in public.
+//     $FreeBSD$
 //
 
 :admins-name: Администраторы FreeBSD.org
 :admins-email: admins@FreeBSD.org
 :admins: {admins-name} <{admins-email}>
 
-:bugmeister-name: Problem Report Database administrators
+:bugmeister-name: Администраторы базы данных сообщений о проблемах
 :bugmeister-email: bugmeister@FreeBSD.org
 :bugmeister: {bugmeister-name} <{bugmeister-email}>
 
-:core-name: Core Team
+:core-name: Основная команда (Core Team)
 :core-email: core@FreeBSD.org
 :core: {core-name} <{core-email}>
 
-:core-secretary-name: Секретарь CORE
+:core-secretary-name: Секретарь основной команды
 :core-secretary-email: core-secretary@FreeBSD.org
 :core-secretary: {core-secretary-name} <{core-secretary-email}>
 
-:cvsadm-name: Администраторы Главного CVS Репозитория
+:cvsadm-name: Администраторы репозитория CVS
 :cvsadm-email: cvsadm@FreeBSD.org
 :cvsadm: {cvsadm-name} <{cvsadm-email}>
 
 :doceng-name: Группа Менеджеров Дерева Документации
 :doceng-email: doceng@FreeBSD.org
 :doceng: {doceng-name} <{doceng-email}>
+
+:doceng-secretary-name: Секретарь Группы Менеджеров Дерева Документации
+:doceng-secretary-email: doceng-secretary@FreeBSD.org
+:doceng-secretary: {doceng-secretary-name} <{doceng-secretary-email}>
 
 :donations-name: Координатор пожертвований для проекта FreeBSD
 :donations-email: donations@FreeBSD.org
@@ -57,7 +59,11 @@
 :mirror-admin-email: mirror-admin@FreeBSD.org
 :mirror-admin: {mirror-admin-name} <{mirror-admin-email}>
 
-:pcvs-name: Администраторы Репозитория Портов
+:git-admin-name: Администраторы Git
+:git-admin-email: gitadm@FreeBSD.org
+:git-admin: {git-admin-name} <{git-admin-email}>
+
+:pcvs-name: Администраторы CVS Репозитория Портов
 :pcvs-email: pcvs@FreeBSD.org
 :pcvs: {pcvs-name} <{pcvs-email}>
 
@@ -69,7 +75,7 @@
 :portmgr-secretary-email: portmgr-secretary@FreeBSD.org
 :portmgr-secretary: {portmgr-secretary-name} <{portmgr-secretary-email}>
 
-:ports-secteam-name: Ports Security Team
+:ports-secteam-name: Команды информационной безопасности портов
 :ports-secteam-email: ports-secteam@FreeBSD.org
 :ports-secteam: {ports-secteam-name} <{ports-secteam-email}>
 
@@ -77,10 +83,10 @@
 :re-email: re@FreeBSD.org
 :re: {re-name} <{re-email}>
 
-:secteam-secretary-name: Security Team Secretary
+:secteam-secretary-name: Секретарь Команды информационной безопасности
 :secteam-secretary-email: secteam-secretary@FreeBSD.org
 :secteam-secretary: {secteam-secretary-name} <{secteam-secretary-email}>
 
-:security-officer-name: Группа Офицеров Безопасности
+:security-officer-name: Команда Офицера Безопасности
 :security-officer-email: security-officer@FreeBSD.org
 :security-officer: {security-officer-name} <{security-officer-email}>
