--- a/shared/ru/urls.adoc
+++ b/shared/ru/urls.adoc
@@ -13,6 +13,9 @@ ifndef::isonline[]
 :main-site-en: https://docs.freebsd.org/en
 endif::[]
 
+// sites
+:manual-site: https://man.freebsd.org/
+
 // books
 :dev-model: {main-site}/books/dev-model/
 :faq: {main-site}/books/faq/
@@ -34,6 +37,8 @@ endif::[]
 :filtering-bridges: {main-site}/articles/filtering-bridges/
 :fonts: {main-site}/articles/fonts/
 :freebsd-questions-article: {main-site}/articles/freebsd-questions/
+:freebsd-src-lsp: {main-site}/articles/freebsd-src-lsp/
+:freebsd-status-report-process: {main-site}/articles/freebsd-status-report-process/
 :freebsd-update-server: {main-site}/articles/freebsd-update-server/
 :geom-class: {main-site}/articles/geom-class/
 :gjournal-desktop: {main-site}/articles/gjournal-desktop/
@@ -59,3 +64,4 @@ endif::[]
 :solid-state: {main-site}/articles/solid-state/
 :vinum: {main-site}/articles/vinum/
 :vm-design: {main-site}/articles/vm-design/
+:vpn-ipsec: {main-site}/articles/vpn-ipsec/
