--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3814,8 +3814,8 @@
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
-:re-members: {dch}, {blackend}, {jfree}, {delphij}, {emaste}, {mmokhi}, {cperciva}, {bofh}
-:re-members-email: {dch-email}, {blackend-email}, {jfree-email}, {delphij-email}, {emaste-email}, {mmokhi-email}, {cperciva-email}, {bofh-email}
+:re-members: {dch}, {blackend}, {jfree}, {delphij}, {emaste}, {mmokhi}, {cperciva}, {bofh}, {ivy}
+:re-members-email: {dch-email}, {blackend-email}, {jfree-email}, {delphij-email}, {emaste-email}, {mmokhi-email}, {cperciva-email}, {bofh-email}, {ivy-email}
 
 // FreeBSD Security Officer
 :so: {gordon}
