--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -143,6 +143,7 @@ The https://www.freebsd.org/releng/charter/[release engineering team charter] de
 * {mmokhi}
 * {cperciva} (Lead)
 * {bofh}
+* {ivy}
 
 [[t-donations]]
 == Donations Team <donations@FreeBSD.org>
